fixed visibility issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -132,15 +132,19 @@
   }
 
   .dropdown {
+    visibility: hidden;
     opacity: 0;
-    transform: translateY(-10px);
-    transition: opacity 0.3s ease, transform 0.3s ease;
+    pointer-events: none;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
   }
 
   .dropdown-open {
+    visibility: visible;
     opacity: 1;
-    transform: translateY(0);
+    pointer-events: auto;
   }
+
+
 
 }
 
